fixed burger menu flickering when pressed

--- a/src/components/BurgerMenu/style.module.scss
+++ b/src/components/BurgerMenu/style.module.scss
@@ -1,8 +1,7 @@
-.buttonContainer{
+.burgerContainer{
     position: fixed;
     right: 0; 
     z-index: 12;
-    transform: scale(0);
 }
 .button{
     right: 0;
@@ -22,7 +21,6 @@
 
     transition: background-color 0.3s ease-in-out;
     
-
     .burger{
         width: 100%;
         &::after, &::before{
